🐞fix: fix navigation ui not responsive

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -1,7 +1,13 @@
+:root {
+  --nav-height: 8vh;
+  --nav-color: #303030;
+  --border-color: hsla(0, 3%, 13%, 0.267);
+}
 @font-face {
   font-family: 'Poppins';
   font-display: swap;
-  src: url('../fonts/poppins/poppins-thin-webfont.woff2') format('woff2'),
+  src: url('../fonts/poppins/poppins-thin-webfont.woff2')
+      format('woff2'),
     url('../fonts/poppins/poppins-thin-webfont.woff') format('woff');
   font-weight: 200;
   font-style: normal;
@@ -10,7 +16,8 @@
 @font-face {
   font-family: 'Poppins';
   font-display: swap;
-  src: url('../fonts/poppins/poppins-light-webfont.woff2') format('woff2'),
+  src: url('../fonts/poppins/poppins-light-webfont.woff2')
+      format('woff2'),
     url('../fonts/poppins/poppins-light-webfont.woff') format('woff');
   font-weight: 300;
   font-style: normal;
@@ -19,8 +26,10 @@
 @font-face {
   font-family: 'Poppins';
   font-display: swap;
-  src: url('../fonts/poppins/poppins-regular-webfont.woff2') format('woff2'),
-    url('../fonts/poppins/poppins-regular-webfont.woff') format('woff');
+  src: url('../fonts/poppins/poppins-regular-webfont.woff2')
+      format('woff2'),
+    url('../fonts/poppins/poppins-regular-webfont.woff')
+      format('woff');
   font-weight: 400;
   font-style: normal;
 }
@@ -28,7 +37,8 @@
 @font-face {
   font-family: 'Poppins';
   font-display: swap;
-  src: url('../fonts/poppins/poppins-medium-webfont.woff2') format('woff2'),
+  src: url('../fonts/poppins/poppins-medium-webfont.woff2')
+      format('woff2'),
     url('../fonts/poppins/poppins-medium-webfont.woff') format('woff');
   font-weight: 500;
   font-style: normal;
@@ -37,8 +47,10 @@
 @font-face {
   font-family: 'Poppins';
   font-display: swap;
-  src: url('../fonts/poppins/poppins-semibold-webfont.woff2') format('woff2'),
-    url('../fonts/poppins/poppins-semibold-webfont.woff') format('woff');
+  src: url('../fonts/poppins/poppins-semibold-webfont.woff2')
+      format('woff2'),
+    url('../fonts/poppins/poppins-semibold-webfont.woff')
+      format('woff');
   font-weight: 600;
   font-style: normal;
 }
@@ -46,25 +58,19 @@
 @font-face {
   font-family: 'Poppins';
   font-display: swap;
-  src: url('../fonts/poppins/poppins-bold-webfont.woff2') format('woff2'),
+  src: url('../fonts/poppins/poppins-bold-webfont.woff2')
+      format('woff2'),
     url('../fonts/poppins/poppins-bold-webfont.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
 
 *,
-*:after,
-*:before {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+*:before,
+*:after {
+  box-sizing: inherit;
 }
-body {
-  min-height: 100vh;
-}
-body {
-  font-family: 'Poppins', sans-serif;
-}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -216,169 +222,6 @@ img {
   border-style: none;
 }
 
-/* Forms
-	 ========================================================================== */
-
-/**
-   * 1. Change the font styles in all browsers.
-   * 2. Remove the margin in Firefox and Safari.
-   */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
-   * Show the overflow in IE.
-   * 1. Show the overflow in Edge.
-   */
-
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
-   * Remove the inheritance of text transform in Edge, Firefox, and IE.
-   * 1. Remove the inheritance of text transform in Firefox.
-   */
-
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
-   * Correct the inability to style clickable types in iOS and Safari.
-   */
-
-button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
-  -webkit-appearance: button;
-}
-
-/**
-   * Remove the inner border and padding in Firefox.
-   */
-
-button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
-   * Restore the focus styles unset by the previous rule.
-   */
-
-button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
-   * Correct the padding in Firefox.
-   */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
-   * 1. Correct the text wrapping in Edge and IE.
-   * 2. Correct the color inheritance from `fieldset` elements in IE.
-   * 3. Remove the padding so developers are not caught out when they zero out
-   *    `fieldset` elements in all browsers.
-   */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
-   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
-   */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
-   * Remove the default vertical scrollbar in IE 10+.
-   */
-
-textarea {
-  overflow: auto;
-}
-
-/**
-   * 1. Add the correct box sizing in IE 10.
-   * 2. Remove the padding in IE 10.
-   */
-
-[type='checkbox'],
-[type='radio'] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
-   * Correct the cursor style of increment and decrement buttons in Chrome.
-   */
-
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
-   * 1. Correct the odd appearance in Chrome and Safari.
-   * 2. Correct the outline style in Safari.
-   */
-
-[type='search'] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
-   * Remove the inner padding in Chrome and Safari on macOS.
-   */
-
-[type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
-   * 1. Correct the inability to style clickable types in iOS and Safari.
-   * 2. Change font properties to `inherit` in Safari.
-   */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
 /* Interactive
 	 ========================================================================== */
 
@@ -419,3 +262,24 @@ template {
 /**
    *End of normalize css
    */
+
+body {
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+  min-height: 100%;
+  line-height: 1.45;
+  font-size: 1.6rem;
+}
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth !important;
+  height: 100%;
+  box-sizing: border-box;
+}
+p {
+  font-size: 1.92rem;
+  text-rendering: optimizeLegibility;
+}
+ul {
+  list-style-type: none;
+}
